# rust-logging-examples

./: .gitattributes  .gitignore  Cargo.toml  README.md
basic/: Cargo.toml
basic/src/: main.rs
examples/: 1_basic.rs  2_formatting.rs  3_to_file.rs  4_spans.rs  5_instruments.rs
formatting/: Cargo.toml
formatting/src/: main.rs
instruments/: Cargo.toml
instruments/src/: main.rs
other-cool-things/: Cargo.toml
other-cool-things/src/: main.rs
spans/: Cargo.toml
spans/src/: main.rs
src/: main.rs
to-file/: Cargo.toml
to-file/src/: main.rs
