[package]
name = "logging_examples"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-appender = "0.1.1"
spandoc = "0.2.0"
